# VaultNotes

./: .gitignore  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  README_LOCALIZATION.md  UNIQUE_USERNAME_SUMMARY_ID.md  UNSHARE_FEATURE_SUMMARY_ID.md  WARP.md  canister_ids.json  dfx.json  download_latest_icp_ledger.sh  download_latest_icrc1_ledger.sh  icrc1_ledger.did  package-lock.json  package.json  test-semantic-search.js  test_mcp_summary.sh  verification.js
docs/: AI_ENHANCEMENT_COMPLETION_SUMMARY.md  AI_IMPLEMENTATION_COMPARISON.md  AI_SUMMARIZER_ENHANCEMENTS.md  AI_SUMMARIZER_TEST_REPORT.md  CLEANUP_SUMMARY.md  DEPLOYMENT_ANALYSIS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  FILTER_FIX_COMPLETE.md  FILTER_VERIFICATION_COMPLETE.md  FINAL_IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LOCAL_CKBTC.md  OUTPUT_QUALITY_COMPARISON.md  QUICK_START_GUIDE.md  README.md  SEMANTIC_SEARCH_IMPLEMENTATION.md  STORAGE_ANALYSIS.md  SUMMARIZER_ARCHITECTURE_DIAGRAM.md  SUMMARIZER_IMPLEMENTATION_SUMMARY.md  SUMMARIZER_IMPROVEMENT_SUMMARY.md  SUMMARIZER_PERFORMANCE_GUIDE.md  SUMMARIZER_USAGE_EXAMPLES.md  TROUBLESHOOTING_EPIPE.md  UNIQUE_USERNAME_IMPLEMENTATION.md  UNSHARE_BUGFIXES.md  (+2 more)
src/encrypted-notes-backend/: Cargo.toml  encrypted-notes-backend.did
src/encrypted-notes-backend/src/: ai_endpoints.rs  ai_service.rs  ai_service_new.rs  helpers.rs  lib.rs  nft.rs  note.rs  search.rs  storage.rs  types.rs  user.rs
src/encrypted-notes-backend/src/ai/: analyzer.rs  benchmark.rs  cache.rs  core.rs  metrics.rs  mod.rs  personalization.rs  types.rs
(+60 files in other folders)
